test/fail/issue-5897/nested.mo
module {
  public let X = module {
    public type Y = Nat;
  };
}
